[gd_scene load_steps=15 format=3 uid="uid://cixii2imoxisb"]

[ext_resource type="Texture2D" uid="uid://blgnmfy3pxki4" path="res://Assets/sprites/water_condenser/Water Condenser - 1.png" id="1_dmvmu"]
[ext_resource type="Script" uid="uid://2kfnoy50ui0c" path="res://scripts/constructions/WaterCondenser.gd" id="1_k6ows"]
[ext_resource type="Texture2D" uid="uid://cfcfpm54dl4pa" path="res://Assets/sprites/water_condenser/Water Condenser - 2.png" id="2_kkagc"]
[ext_resource type="Texture2D" uid="uid://dpdy5upkuanlb" path="res://Assets/sprites/water_condenser/Water Condenser - 3.png" id="3_k6ows"]
[ext_resource type="Texture2D" uid="uid://haha8g8fbivm" path="res://Assets/sprites/water_condenser/Water Condenser - 4.png" id="4_mijtm"]
[ext_resource type="FontFile" uid="uid://b4yua3jl2d103" path="res://Assets/fonts/Efourpro-OPrP.ttf" id="5_kkagc"]
[ext_resource type="Texture2D" uid="uid://bprnrlptjv0yk" path="res://Assets/icons/resources/watericon.png" id="7_mijtm"]
[ext_resource type="Script" uid="uid://cg8u3vpbq0fql" path="res://scripts/constructions/ProgressBar/water_condenser_progress_bar.gd" id="7_q1vk7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlvb7"]
size = Vector2(173.18, 222.128)

[sub_resource type="SpriteFrames" id="SpriteFrames_q1vk7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dmvmu")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kkagc")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_k6ows")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_mijtm")
}],
"loop": true,
"name": &"Constructed",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1vk7"]
bg_color = Color(0.725615, 0.583074, 0.141287, 1)

[sub_resource type="Animation" id="Animation_sflmv"]
resource_name = "construction_progress_color"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaterCondenserProgressBar:theme_override_styles/fill")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("StyleBoxFlat_q1vk7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaterCondenserProgressBar:theme_override_styles/fill:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.6, 0.964706, 0.6, 1)]
}

[sub_resource type="Animation" id="Animation_urq7b"]
resource_name = "manutence_progress_color"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaterCondenserProgressBar:theme_override_styles/fill")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("StyleBoxFlat_q1vk7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaterCondenserProgressBar:theme_override_styles/fill:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.725615, 0.583074, 0.141287, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6dirq"]
_data = {
&"construction_progress_color": SubResource("Animation_sflmv"),
&"manutence_progress_color": SubResource("Animation_urq7b")
}

[node name="WaterCondenser" type="Node2D"]
script = ExtResource("1_k6ows")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(27, -1.19209e-07)
scale = Vector2(1.37055, 0.655266)
shape = SubResource("RectangleShape2D_tlvb7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.364)
sprite_frames = SubResource("SpriteFrames_q1vk7")
animation = &"Constructed"
autoplay = "1"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 5

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(26, -1)
scale = Vector2(1.37055, 0.655266)
shape = SubResource("RectangleShape2D_tlvb7")

[node name="WaterConstructionButton" type="Button" parent="."]
offset_left = -81.0
offset_top = -17.0
offset_right = 80.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("5_kkagc")
theme_override_font_sizes/font_size = 20
text = "Construct
"

[node name="WaterCondenserProgressBar" type="ProgressBar" parent="."]
offset_left = -59.0
offset_top = -87.0
offset_right = 68.0
offset_bottom = -60.0
theme_override_styles/fill = SubResource("StyleBoxFlat_q1vk7")
step = 1.0
script = ExtResource("7_q1vk7")

[node name="WaterCollect" type="Button" parent="."]
offset_left = -27.0
offset_top = -147.0
offset_right = 493.0
offset_bottom = 373.0
scale = Vector2(0.108027, 0.108027)
theme_override_icons/icon = ExtResource("7_mijtm")

[node name="ChangeColorProgressBar" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6dirq")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="WaterConstructionButton" to="." method="_on_water_construction_button_pressed"]
[connection signal="pressed" from="WaterCollect" to="." method="_on_water_collect_pressed"]
